Avoid NoSuchMethodError